# phun

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Code.md  LICENSE.txt
Math/docs/: documentation.md
Math/src/: Matrix.cpp
Object/: CMakeLists.txt
Object/Math/: CMakeLists.txt
Object/Math/include/: Matrix.hpp
Object/docs/: documentation.md
Object/include/: Object.hpp  ObjectBase.hpp  ObjectManager.hpp
Object/src/: Object.cpp  ObjectManager.cpp
include/: Object.hpp  ObjectBase.hpp  ObjectManager.hpp
include/Math/: Matrix.hpp  Vector.hpp
include/Object/: Object.hpp  ObjectBase.hpp  ObjectManager.hpp  Reference.hpp
main/: main.cpp
src/: Object.cpp  ObjectBase.cpp  ObjectManager.cpp  main.cpp
src/Math/: Matrix.cpp  Vector.cpp
src/Object/: ObjectBase.cpp  ObjectManager.cpp
